--- a/style.css
+++ b/style.css
@@ -1,19 +1,26 @@
-header{
+header {
     color: #fff;
     height: 112px;
     line-height: 112px;
+    position: fixed;
+    width: 100%;
+    z-index: 100;
 }
-header a.logo{
+
+header a.logo {
     float: left;
 }
-header nav{
+
+header nav {
     float: right;
     font-weight: bold;
 }
-header nav ul li{
+
+header nav ul li {
     padding-left: 30px;
 }
-header nav ul li a{
+
+header nav ul li a {
     color: #fff;
     /* browser compatibility */
     transition: all 0.3s ease-in;
@@ -21,7 +28,93 @@ header nav ul li a{
     -moz-transition: all 0.3s ease-in;
     -o-transition: all 0.3s ease-in;
 }
-header nav ul li a:hover, header nav ul li a:focus{
+
+header nav ul li a:hover,
+header nav ul li a:focus {
     color: #e74c3c;
     text-decoration: none;
+}
+
+
+/* ****** slider section ***** */
+
+.slider .slider ul.slider-carousel .slider ul.slider-carousel li {
+    height: 600px;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+}
+
+.slider ul.slider-carousel li h1 {
+    margin-top: 150px;
+    margin-bottom: 30px;
+    color: #fff;
+}
+
+.slider ul.slider-carousel li p {
+    margin-bottom: 50px;
+}
+
+.slider ul.slider-carousel li a {
+    padding: 10px 50px;
+    margin-right: 30px;
+    color: #fff;
+    font-weight: bold;
+    transition: all 0.3s ease-in;
+    -webkit-transition: all 0.3s ease-in;
+    -moz-transition: all 0.3s ease-in;
+    -o-transition: all 0.3s ease-in;
+}
+
+.slider ul.slider-carousel li a:last-child {
+    margin-right: 0px;
+}
+
+.img1 {
+    background: url(img/slider/slider1.png);
+    background-size: 100% 100%;
+}
+
+.slider ul.slider-carousel li a.cta1:hover {
+    background-color: #ff695a;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+}
+
+.slider ul.slider-carousel li a.cta2:hover {
+    background-color: #3f9cfa;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+}
+
+.slider ul.sliderpager li {
+    padding: 0 3px;
+    height: 28px;
+    line-height: 28px;
+}
+
+.slider ul.sliderpager li a {
+    color: #34495e;
+}
+
+.slider ul.sliderpager li.selected a {
+    color: #e74c3c;
+}
+
+
+/* ****** our services section ******* */
+
+.services {
+    text-align: center;
+}
+
+.services .services-content i {
+    font-size: 32px;
+    color: #5555;
+}
+
+.services header {
+    margin-bottom: 42px;
 }
