--- a/style.css
+++ b/style.css
@@ -29,7 +29,11 @@ header nav ul li a {
     -o-transition: all 0.3s ease-in;
 }
 
-header nav ul li a:hover,
+header nav ul li a:hover {
+    color: #e74c3c;
+    text-decoration: none;
+}
+
 header nav ul li a:focus {
     color: #e74c3c;
     text-decoration: none;
@@ -115,6 +119,97 @@ header nav ul li a:focus {
     color: #5555;
 }
 
-.services header {
+.services-header {
     margin-bottom: 42px;
+    text-align: center;
+}
+
+.portfolio-header {
+    margin-bottom: 42px;
+    text-align: center;
+}
+
+.portfolio {
+    color: #fff;
+    background: url(img/portfolio/portfolio-bg.png);
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
+
+.portfolio .inner-content {
+    position: relative;
+    width: 265px;
+    height: 225px;
+}
+
+.portfolio .inner-content img {
+    width: 100%;
+    height: 100%;
+}
+
+.portfolio .inner-content .overlay-content {
+    position: absolute;
+    top: 100%;
+    left: 0px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s ease-in;
+    -webkit-transition: all 0.3s ease-in;
+    -moz-transition: all 0.3s ease-in;
+    -o-transition: all 0.3s ease-in;
+}
+
+.portfolio .inner-content .overlay-content h3 {
+    color: white;
+}
+
+.portfolio .inner-content .overlay-content p {
+    color: white;
+}
+
+.portfolio .inner-content .overlay-content h3 {
+    padding-top: 20%;
+    color: #e74c3c;
+}
+
+.portfolio .inner-content:hover .overlay-content {
+    top: 0px;
+}
+
+.portfolio .inner-content .overlay-content p a {
+    color: #2d82d8;
+    font-weight: bold;
+}
+
+.portfolio .portfolio-nav {
+    text-align: center;
+    margin-top: 30px;
+}
+
+
+/* this will make arrow clickable like link */
+
+.portfolio .portfolio-nav li {
+    cursor: pointer;
+    margin-right: 10px;
+    font-size: 14px;
+    width: 28px;
+    height: 28px;
+    line-height: 28px;
+    background-color: #333;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+}
+
+.portfolio-carousel li:last-child {
+    margin-right: 0px;
+}
+
+.portfolio .portfolio-nav li:hover {
+    background-color: #e74c3c;
 }
