--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ header nav ul li a:focus {
 }
 
 .img1 {
+    height: 420px;
     background: url(img/slider/slider1.png);
     background-size: 100% 100%;
 }
@@ -302,7 +303,7 @@ header nav ul li a:focus {
 
 /* this will make arrow clickable like link */
 
-.team .team-nav li {
+.team.team-nav li {
     cursor: pointer;
     margin-right: 10px;
     font-size: 14px;
@@ -465,7 +466,7 @@ header nav ul li a:focus {
     color: #fff;
 }
 
-form {
+form.contact-form {
     width: 40%;
     margin: 0 auto;
     text-align: center;
@@ -496,4 +497,95 @@ textarea {
     background-color: #e74c3c;
     border: none;
     font-weight: bold;
+}
+
+
+/* footer */
+
+footer {
+    /* text-align: center; */
+    padding-top: 56px;
+}
+
+footer h1 {
+    margin-top: 15px;
+    padding-bottom: 28px;
+}
+
+footer p i {
+    color: #2d82d8;
+}
+
+footer p span {
+    font-weight: bold;
+}
+
+footer p.about {
+    margin-bottom: 20px;
+}
+
+form.update-input:not([type=submit]),
+textarea {
+    width: 96.5%;
+    margin-bottom: 40px;
+    color: #777;
+    padding-left: 20px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2) inset;
+    border: none;
+}
+
+#take-email {
+    margin-bottom: 20px;
+}
+
+#submit-button {
+    background-color: #e74c3c;
+    color: #fff;
+    border: none;
+    padding: 0px 30px;
+    height: 40px;
+    line-height: 40px;
+    font-weight: bold;
+}
+
+.footer-social-links li {
+    padding: 0 10px;
+    font-size: 28px;
+}
+
+.footer-social-links li a i.fa-facebook {
+    color: #3b5998;
+}
+
+.footer-social-links li a i.fa-twitter {
+    color: #00aced;
+}
+
+.footer-social-links li a i.fa-youtube {
+    color: #bb0000;
+}
+
+.footer-social-links li a i.fa-linkedin {
+    color: #007bb5;
+}
+
+.footer-social-links li a i.fa-dribbble {
+    color: #ea4c89;
+}
+
+.copyright {
+    text-align: center;
+    color: #fff;
+    background-color: #333;
+    height: 42px;
+    line-height: 42px;
+    margin-top: 56px;
+}
+
+footer p span.primary {
+    padding-left: 0px;
+}
+
+.copyright p {
+    margin: 0 0 0 0;
 }
