--- a/css/responsive.css
+++ b/css/responsive.css
@@ -47,4 +47,39 @@ slicknav_menu {
         color: #e74c3c;
         background-color: rgba(0, 0, 0, 0);
     }
+    .slider,
+    .slider ul.slider-carousel,
+    .slider ul.slider-carousel li {
+        height: 450px;
+    }
+    .slider ul.slider-carousel li h1 {
+        margin-top: 100px;
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width:550px) {
+    .slider,
+    .slider ul.slider-carousel,
+    .slider ul.slider-carousel li {
+        height: 380px;
+    }
+    .slider ul.slider-carousel li h1 {
+        margin-top: 70px;
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width:420px) {
+    .slider ul li a {
+        display: block;
+        padding: 0;
+        width: 100%;
+        text-align: center;
+    }
+    .slider ul.slider-carousel li h1 {
+        margin-top: 50px;
+        margin-bottom: 30px;
+        font-size: 30px;
+    }
 }
