--- a/css/responsive.css
+++ b/css/responsive.css
@@ -56,6 +56,60 @@ slicknav_menu {
         margin-top: 100px;
         margin-bottom: 30px;
     }
+    /***** portfolio responsive styles *****/
+    .portfolio {
+        background: none;
+        background-color: #eca535;
+    }
+    .portfolio-carousel li {
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+    .portfolio-carousel h3 {
+        font-size: 14px;
+    }
+    .portfolio .inner-content {
+        width: 200px;
+        height: 180px;
+    }
+    .team-carousel h3 {
+        font-size: 14px;
+    }
+    .team .inner-content {
+        width: 200px;
+        height: 180px;
+    }
+    .team-carousel li {
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+    .team-carousel p.description {
+        display: none;
+    }
+}
+
+@media screen and (max-width:800px) {
+    .portfolio-carousel h3 {
+        font-size: 12px;
+    }
+    .portfolio .inner-content {
+        width: 180px;
+        height: 150px;
+    }
+    .portfolio li p {
+        font-size: 12px;
+    }
+    /***** team responsive styles *****/
+    .team-carousel h3 {
+        font-size: 12px;
+    }
+    .team .inner-content {
+        width: 180px;
+        height: 150px;
+    }
+    .team li p {
+        font-size: 12px;
+    }
 }
 
 @media screen and (max-width:550px) {
