--- a/css/responsive.css
+++ b/css/responsive.css
@@ -86,6 +86,11 @@ slicknav_menu {
     .team-carousel p.description {
         display: none;
     }
+    /* testimonials section */
+    .testimonials {
+        background: none;
+        background-color: #0d1722;
+    }
 }
 
 @media screen and (max-width:800px) {
@@ -110,6 +115,10 @@ slicknav_menu {
     .team li p {
         font-size: 12px;
     }
+    /* testimonial section */
+    .testimonial-carousel li {
+        margin: 0 100px;
+    }
 }
 
 @media screen and (max-width:550px) {
@@ -121,6 +130,9 @@ slicknav_menu {
     .slider ul.slider-carousel li h1 {
         margin-top: 70px;
         margin-bottom: 30px;
+    }
+    .testimonial-carousel li {
+        margin: 0 50px;
     }
 }
 
